2014-03-12  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/multiarch/strspn.c (strspn): Build IFUNC
	selector for static builds.

2014-03-11  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	[BZ #16683]
	* sysdeps/powerpc/powerpc64/multiarch/memset-ppc64.S (__bzero_ppc):
	Define it for static builds as well.
	(NO_BZERO_IMPL): Likewise.

2014-03-11  Vidya Ranganathan  <vidya@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/power7/strspn.S: New file: Optimization.
	* sysdeps/powerpc/powerpc64/multiarch/strspn.c: New file:
	multiarch strspn for PPC64.
	* sysdeps/powerpc/powerpc64/multiarch/strspn-ppc64.c: New file
	* sysdeps/powerpc/powerpc64/multiarch/strspn-power7.S: New file
	* sysdeps/powerpc/powerpc64/multiarch/ifunc-impl-list.c:
	(__libc_ifunc_impl_list): Likewise.
	* sysdeps/powerpc/powerpc64/multiarch/Makefile: Add strspn
	multiarch optimizations
	* string/strspn.c (strspn): Using macro to redefine symbol name.

2014-03-10  Vidya Ranganathan  <vidya@linux.vnet.ibm.com>
	    Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/power7/strncat.S: New file: Optimization.
	* sysdeps/powerpc/powerpc64/multiarch/strncat.c: New file:
	multiarch strncat for PPC64.
	* sysdeps/powerpc/powerpc64/multiarch/strncat-ppc64.c: New file
	* sysdeps/powerpc/powerpc64/multiarch/strncat-power7.S: New file
	* sysdeps/powerpc/powerpc64/multiarch/ifunc-impl-list.c:
	(__libc_ifunc_impl_list): Likewise.
	* sysdeps/powerpc/powerpc64/multiarch/Makefile: Add strncat
	multiarch optimizations

2014-03-03  Rajalakshmi Srinivasaraghavan <raji@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/power7/strrchr.S: New file.
	* sysdeps/powerpc/powerpc64/multiarch/Makefile: Add strrchr multiarch
	implementation.
	* sysdeps/powerpc/powerpc64/multiarch/ifunc-impl-list.c:
	(__libc_ifunc_impl_list): Likewise.
	* sysdeps/powerpc/powerpc64/multiarch/strrchr.c: New file.
	* sysdeps/powerpc/powerpc64/multiarch/strrchr-ppc64.c: New file.